update: Truuth classificaiton api integration
