# portal-backend/src/interfaces/DocumentType.ts
@@ -1,6 +1,0 @@
-export enum DocumentType {
-    PASSPORT = 'Australian Passport',
-    DRIVER_LICENCE = 'Australian Driver Licence',
-    RESUME = 'Resume',
-    OTHER = 'Other' // Allow other documents just in case
-}
